[package]
name = "ws2812-nop-samd21"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
smart-leds-trait = "~0.1" 
cortex-m = "~0.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "~0.2"

[dev-dependencies]
circuit_playground_express = "~0.2"
cortex-m-rt = "~0.6"
panic-halt = "~0.2"
smart-leds = "~0.1"
