[package]
name = "ws2812-nop-samd21"
version = "0.2.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
description = "Nop-based bitbanger for 48MHz SAMD21 devices"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/ws2812-nop-samd21"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812", "driver", "atsamd"]

[dependencies]
smart-leds-trait = "~0.2" 
cortex-m = "~0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "~0.2"

[dev-dependencies]
circuit_playground_express = "~0.3"
cortex-m-rt = "~0.6"
panic-halt = "~0.2"
smart-leds = "~0.2"
